# 002-dog-and-cat

./: .gitignore  CMakeLists.txt  cat_dog_classifier.py  cat_dog_classifier_improved.py  cat_dog_classifier_mlp.py  cat_dog_classifier_resnet18.py  find_optimal_batch_size.py  inference.cpp  predict.py  prompt.md  requirements.txt  train.py
checkpoints/: .gitkeep
cpp/Demo/: Demo.slnx
cpp/Demo/Demo/: Demo.cpp  Demo.h  Demo.rc  Demo.vcxproj  Demo.vcxproj.filters  DemoDlg.cpp
model/: __init__.py  models.py
